Completed adding all functionalities

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@popperjs/core": "^2.9.2",
+    "bootstrap": "^5.1.3",
     "firebase": "^8.9.1",
     "mssql": "^7.2.0",
     "next": "11.0.1",
