--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@
 /node_modules
 /.pnp
 .pnp.js
-/util/firebase.js
 
 # testing
 /coverage
@@ -33,3 +32,6 @@ yarn-error.log*
 
 # vercel
 .vercel
+
+/util/firebase.js
+/util/sqlconfig.js
