--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 /node_modules
+/util/
 /.pnp
 .pnp.js
 
@@ -36,4 +37,3 @@ yarn-error.log*
 # /util/firebase.js
 # /util/sqlconfig.js
 
-/util
